# ai-assessment

./: .env.example  .gitignore  README.md  pyproject.toml
sample_data/financial_statements/: april-2025.csv
src/agent/: configurations.py  graph.py  state.py  utils.py
src/agent/node/: __init__.py  chat.py  finance.py  router.py
src/agent/tools/: __init__.py  financial_statements_tool.py  retriever_tool.py
